update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 ./logs/*
 ./env
 .DS_Store
-*/screenshots/realtime/*
-*/screenshots/all/daiy/*
-*/screenshots/all/weekly/*
-*/screenshots/all/monthly/*
+**/screenshots/realtime/
+**/screenshots/all/daiy/
+**/screenshots/all/weekly/
+**/screenshots/all/monthly/
 cookies.txt
