Update portfolio and other lists

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-logs/*
+logs/*.log
 ./env
 .DS_Store
 screenshots/realtime/*
+screenshots/portfolio/*.png
+screenshots/following/*.png
+screenshots/vn30/*.png
+screenshots/urgent/*
 screenshots/all/daily/*.png
 screenshots/all/weekly/*.png
 screenshots/all/monthly/*.png
 cookies.txt
+src/screenshot/__pycache__/*.pyc
