--- a/stock.env
+++ b/stock.env
@@ -4,9 +4,16 @@ screenshot_realtime_1day=screenshots/realtime/1_day/
 screenshot_1day=screenshots/all/daily/
 screenshot_1week=screenshots/all/weekly/
 screenshot_1month=screenshots/all/monthly/
+screenshot_portfolio=screenshots/portfolio/
+screenshot_following=screenshots/following/
+screenshot_vn30=screenshots/vn30/
+screenshot_urgent=screenshots/urgent/
 
 all_stocks=screenshots/all_stocks.csv
 following_stocks=screenshots/following.csv
 vn30=screenshots/vn30.csv
 portfolio=screenshots/portfolio.csv
 
+sender=ngocle9185@gmail.com
+receiver=viettn85@gmail.com
+password=Lavender#2019
