Update screenshot code

--- a/stock.env
+++ b/stock.env
@@ -1,9 +1,12 @@
 screenshot_1h=screenshots/realtime/1_hour/
 screenshot_15min=screenshots/realtime/15_minutes/
 screenshot_realtime_1day=screenshots/realtime/1_day/
-screenshot_1day=screenshots/all/daily/
-screenshot_1week=screenshots/all/weekly/
-screenshot_1month=screenshots/all/monthly/
+# screenshot_1day=screenshots/all/daily/
+screenshot_1day=/Users/viet_tran/Google Drive/Working/Trading/Stock/Screenshots/DailyScreenshots/
+# screenshot_1week=screenshots/all/weekly/
+screenshot_1week=/Users/viet_tran/Google Drive/Working/Trading/Stock/Screenshots/WeeklyScreenshots/
+# screenshot_1month=screenshots/all/monthly/
+screenshot_1month=/Users/viet_tran/Google Drive/Working/Trading/Stock/Screenshots/MonthlyScreenshots/
 screenshot_portfolio=screenshots/portfolio/
 screenshot_following=screenshots/following/
 screenshot_vn30=screenshots/vn30/
