--- a/stock.env
+++ b/stock.env
@@ -11,12 +11,16 @@ screenshot_portfolio=screenshots/portfolio/
 screenshot_following=screenshots/following/
 screenshot_vn30=screenshots/vn30/
 screenshot_urgent=screenshots/urgent/
+screenshot_trends=screenshots/trends/
+screenshot_scan=screenshots/scan/
+screenshot_ps=screenshots/ps/
+screenshot_ps_auto=screenshots/ps_auto/
 
 all_stocks=screenshots/all_stocks.csv
 following_stocks=screenshots/following.csv
 vn30=screenshots/vn30.csv
 portfolio=screenshots/portfolio.csv
+trends=screenshots/trends.csv
+scan=screenshots/scan.csv
+ps=screenshots/ps.csv
 
-sender=ngocle9185@gmail.com
-receiver=viettn85@gmail.com
-password=Lavender#2019
