--- a/stock.env
+++ b/stock.env
@@ -15,12 +15,17 @@ screenshot_trends=screenshots/trends/
 screenshot_scan=screenshots/scan/
 screenshot_ps=screenshots/ps/
 screenshot_ps_auto=screenshots/ps_auto/
+screenshot_shortlist=screenshots/Shortlist/
+screenshot_target=screenshots/Target/
 
 all_stocks=screenshots/all_stocks.csv
 following_stocks=screenshots/following.csv
 vn30=screenshots/vn30.csv
+urgent=screenshots/urgent.csv
 portfolio=screenshots/portfolio.csv
 trends=screenshots/trends.csv
 scan=screenshots/scan.csv
 ps=screenshots/ps.csv
+shortlist=screenshots/Shortlist.csv
+target=screenshots/Target.csv
 
