Update stock lists

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,17 @@ logs/*.log
 env
 env/*
 .DS_Store
-screenshots/*
+screenshots/following/*.png
+screenshots/portfolio/*.png
+screenshots/ps/*.png
+screenshots/ps_auto/*.png
+screenshots/realtime/*.png
+screenshots/scan/*.png
+screenshots/Shortlist/*.png
+screenshots/Target/*.png
+screenshots/trends/*.png
+screenshots/urgent/*.png
+screenshots/vn30/*.png
+
 cookies.txt
 src/screenshot/__pycache__/*.pyc
