Update screenshots for ps and stocks

--- a/stock.env
+++ b/stock.env
@@ -17,6 +17,7 @@ screenshot_ps=screenshots/ps/
 screenshot_ps_auto=screenshots/ps_auto/
 screenshot_shortlist=screenshots/Shortlist/
 screenshot_target=screenshots/Target/
+screenshot_candidate=screenshots/Candidate/
 
 all_stocks=screenshots/all_stocks.csv
 following_stocks=screenshots/following.csv
@@ -28,4 +29,5 @@ scan=screenshots/scan.csv
 ps=screenshots/ps.csv
 shortlist=screenshots/Shortlist.csv
 target=screenshots/Target.csv
+candidate=screenshots/Candidate.csv
 
