--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,6 @@ logs/*.log
 env
 env/*
 .DS_Store
-screenshots/following/*.png
-screenshots/portfolio/*.png
-screenshots/ps/*.png
-screenshots/ps_auto/*.png
-screenshots/realtime/*.png
-screenshots/scan/*.png
-screenshots/Shortlist/*.png
-screenshots/Target/*.png
-screenshots/trends/*.png
-screenshots/urgent/*.png
-screenshots/vn30/*.png
-
+screenshots/*
 cookies.txt
 src/screenshot/__pycache__/*.pyc
